// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo authz type export "frodo authz type export --all": should export all resource types to a single file 1`] = `""`;

exports[`frodo authz type export "frodo authz type export --all": should export all resource types to a single file 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147346,
      "description": "Frodo Test Resource Type Thirteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616300,
      "name": "FrodoTestResourceType13",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
    },
    "119b291c-40b3-4b1e-8d84-c2a561a2cb1f": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147437,
      "description": "Frodo Test Resource Type Fourteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616482,
      "name": "FrodoTestResourceType14",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
    },
    "3c5f13af-ca17-403e-b47d-d15263cce954": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684545571229,
      "description": "Frodo Test Resource Type Fifteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616660,
      "name": "FrodoTestResourceType15",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
    },
    "3fc799d7-b73f-49e0-a70b-e37990e54e56": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147204,
      "description": "Frodo Test Resource Type Twelve",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616120,
      "name": "FrodoTestResourceType12",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
    },
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
    "993eba78-1c3f-4f27-b205-b4b29418f831": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147077,
      "description": "Frodo Test Resource Type Eleven",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717615932,
      "name": "FrodoTestResourceType11",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
    },
    "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b": {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661536,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export --type-id 76656a38-5f8e-401b-83aa-4ccb74ce88d2": should export the resource type with id "76656a38-5f8e-401b-83aa-4ccb74ce88d2" 1`] = `""`;

exports[`frodo authz type export "frodo authz type export --type-id 76656a38-5f8e-401b-83aa-4ccb74ce88d2": should export the resource type with id "76656a38-5f8e-401b-83aa-4ccb74ce88d2" 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export --type-name URL -f test.json": should export the resource type named "URL" 1`] = `""`;

exports[`frodo authz type export "frodo authz type export --type-name URL -f test.json": should export the resource type named "URL" 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 1`] = `""`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "993eba78-1c3f-4f27-b205-b4b29418f831": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147077,
      "description": "Frodo Test Resource Type Eleven",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717615932,
      "name": "FrodoTestResourceType11",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 3`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "3fc799d7-b73f-49e0-a70b-e37990e54e56": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147204,
      "description": "Frodo Test Resource Type Twelve",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616120,
      "name": "FrodoTestResourceType12",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 4`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147346,
      "description": "Frodo Test Resource Type Thirteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616300,
      "name": "FrodoTestResourceType13",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 5`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "119b291c-40b3-4b1e-8d84-c2a561a2cb1f": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147437,
      "description": "Frodo Test Resource Type Fourteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616482,
      "name": "FrodoTestResourceType14",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 6`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "3c5f13af-ca17-403e-b47d-d15263cce954": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684545571229,
      "description": "Frodo Test Resource Type Fifteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616660,
      "name": "FrodoTestResourceType15",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 7`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b": {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661536,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -A": should export all resource types to separate files 8`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -a --file my-allAlphaResourceTypes.resourcetype.authz.json": should export all resource types to a single file named my-allAlphaResourceTypes.resourcetype.authz.json 1`] = `""`;

exports[`frodo authz type export "frodo authz type export -a --file my-allAlphaResourceTypes.resourcetype.authz.json": should export all resource types to a single file named my-allAlphaResourceTypes.resourcetype.authz.json 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147346,
      "description": "Frodo Test Resource Type Thirteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616300,
      "name": "FrodoTestResourceType13",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "0aa5ed25-0c62-4ff5-9a42-3bda8c5cbb76",
    },
    "119b291c-40b3-4b1e-8d84-c2a561a2cb1f": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147437,
      "description": "Frodo Test Resource Type Fourteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616482,
      "name": "FrodoTestResourceType14",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "119b291c-40b3-4b1e-8d84-c2a561a2cb1f",
    },
    "3c5f13af-ca17-403e-b47d-d15263cce954": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684545571229,
      "description": "Frodo Test Resource Type Fifteen",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616660,
      "name": "FrodoTestResourceType15",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3c5f13af-ca17-403e-b47d-d15263cce954",
    },
    "3fc799d7-b73f-49e0-a70b-e37990e54e56": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147204,
      "description": "Frodo Test Resource Type Twelve",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717616120,
      "name": "FrodoTestResourceType12",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3fc799d7-b73f-49e0-a70b-e37990e54e56",
    },
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
    "993eba78-1c3f-4f27-b205-b4b29418f831": {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684544147077,
      "description": "Frodo Test Resource Type Eleven",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717615932,
      "name": "FrodoTestResourceType11",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "993eba78-1c3f-4f27-b205-b4b29418f831",
    },
    "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b": {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661536,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -i 76656a38-5f8e-401b-83aa-4ccb74ce88d2 -f my-76656a38-5f8e-401b-83aa-4ccb74ce88d2.resourcetype.authz.json": should export the resource type with id "76656a38-5f8e-401b-83aa-4ccb74ce88d2" into file named my-76656a38-5f8e-401b-83aa-4ccb74ce88d2.resourcetype.authz.json 1`] = `""`;

exports[`frodo authz type export "frodo authz type export -i 76656a38-5f8e-401b-83aa-4ccb74ce88d2 -f my-76656a38-5f8e-401b-83aa-4ccb74ce88d2.resourcetype.authz.json": should export the resource type with id "76656a38-5f8e-401b-83aa-4ccb74ce88d2" into file named my-76656a38-5f8e-401b-83aa-4ccb74ce88d2.resourcetype.authz.json 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;

exports[`frodo authz type export "frodo authz type export -n URL": should export the resource type named "URL" 1`] = `""`;

exports[`frodo authz type export "frodo authz type export -n URL": should export the resource type named "URL" 2`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {},
  "resourcetype": {
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2": {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1694717661706,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  },
  "script": {},
}
`;
